@@ -1,3 +1,10 @@
+2009-07-11  Anthony Green  <green@moxielogic.com>
+
+	* moxie-tdep.c (moxie_gdbarch_init): Call
+	set_gdbarch_process_record.
+	(moxie_process_record): New.
+	(moxie_process_readu): New.
+
 2009-06-30  Vladimir Prus  <vladimir@codesourcery.com>
 
 	* mi/mi-cmd-stack.c (parse_print_values): New.
