@@ -1,3 +1,8 @@
+2009-07-13  Anthony Green  <green@moxielogic.com>
+
+	* scripts/dejagnu/moxie-sim.exp: Tweak gdb test options (can
+	reverse debug, for instance).
+
 2009-06-26  Anthony Green  <green@moxielogic.com>
 
 	* build.xml: Build GCC with g++.
